--- a/_resources/portfolio-2.html
+++ b/_resources/portfolio-2.html
@@ -5,3 +5,35 @@ collection: resources
 ---
 
 This is an item in your portfolio. It can be have images or nice text. If you name the file .md, it will be parsed as markdown. If you name the file .html, it will be parsed as HTML. 
+
+
+# Scientific Computing:
+## Operating System 
+* [The Unix Shell](http://swcarpentry.github.io/shell-novice/)
+* [Linux and Unix commands, information, and help](http://www.computerhope.com/unix.htm)
+* [High performance computing for Mac OS X](http://hpc.sourceforge.net)
+* [Virtual machine for Windows ](https://www.virtualbox.org)(if you have to...)
+
+## Programming Language
+### Python
+* [The Python 3 Tutorial](https://docs.python.org/3/tutorial/)
+* [The Jupyter notebook](http://jupyter.org/index.html)
+* [Installing Python/IPython Using Anaconda ](https://www.anaconda.com/distribution/) and [Add-Ons for Academic Use](https://store.continuum.io/cshop/academicanaconda)
+* [Python for Scientific Computing](http://bender.astro.sunysb.edu/classes/python-science/)
+
+### Fortran
+* [Fortran: FAQs, Help, and Tutorials](http://www.dmoz.org/Computers/Programming/Languages/Fortran/FAQs,_Help,_and_Tutorials/Fortran_90_and_95/)
+* [Useful Fortran links from Gilberto E. Urroz](http://www.neng.usu.edu/cee/faculty/gurro/Fortran.html)
+
+### Matlab
+* In my opinion, it is better not to use Matlab.  There are many reasons for this statement, such as [_link_](https://folk.uio.no/jeanra/Informatics/UsePythonNotMatlab.html).
+* Please take a look at Python and [Get the MATLAB to Python White Paper](https://www.enthought.com/white-paper-matlab-to-python)  
+
+## Libraries and Softwares
+* [LAPACK](http://www.netlib.org/lapack/) — Linear Algebra PACKage
+* [PETSc](https://www.mcs.anl.gov/petsc/) — Portable, Extensible Toolkit for Scientific Computation
+* [FEniCS](https://fenicsproject.org)  — platform for partial differential equations (PDE)
+***
+## Tutorials and HowTos:
+
+## [Shared by Me](http://xiaozhouli.com/links/shared/index.html)
